--- a/style.css
+++ b/style.css
@@ -7,27 +7,36 @@
 }
 
 #nav {
-    background-color: whitesmoke;
+    background-color: rgba(255, 255, 255, 1.0);
     line-height:30px;
-    height:120px;
+    height:100%;
     width:100px;
-    color:white;
-    float:left;
-    padding:5px;
-}
-#section {
-    background-color: rgba(255, 255, 255, 0.70);
-    background-size: 100%;
-    width: 90%;
+    color:black;
     float:left;
     padding:10px;
+    margin-right: 20px;
+}
+#section {
+    background-color: blue;
+    background-size: 100%;
+    width: 40%;
+    float:right;
+    padding:20px;
     color: black;
 }
 #section2 {
+    float: left;
+    background-size: 100%;
+    width: 40%;
+    padding: 20px;
+    color: black;
+    background-color: green;
+
+
 
 }
 #footer {
-    background-image: url("http://randomstory.org/wp-content/uploads/2013/07/41-Best-and-Coolest-Collection-HD-Wallpapers-Ever-38.jpg");
+    background-color: black;
     background-size: auto;
     color:whitesmoke;
     clear:both;
@@ -35,7 +44,4 @@
     padding:5px;
     font-size: 10px;
     opacity: 0.75;
-}
-#html {
-    background-image: url("http://www.hdwallpaperscool.com/wp-content/uploads/2013/11/widescreen-cool-3d-hd-wallpapers-images-background.jpg");
 }
