--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #header {
-    background-image: url("http://www.munisource.org/wp-content/uploads/2014/08/header.png");
+    background-color: aqua;
     background-size: 100%;
     color:white;
     text-align:center;
