--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #header {
-    background-color: aqua;
+    background-color: darkblue;
     background-size: 100%;
     color:white;
     text-align:center;
@@ -7,7 +7,7 @@
 }
 
 #nav {
-    background-color: rgba(255, 255, 255, 1.0);
+    background-color: aliceblue(255, 255, 255, 1.0);
     line-height:30px;
     height:100%;
     width:100px;
@@ -17,7 +17,7 @@
     margin-right: 20px;
 }
 #section {
-    background-color: blue;
+    background-color: darkolivegreen;
     background-size: 100%;
     width: 40%;
     float:right;
@@ -30,15 +30,15 @@
     width: 40%;
     padding: 20px;
     color: black;
-    background-color: green;
+    background-color: darkolivegreen;
 
 
 
 }
 #footer {
-    background-color: black;
+    background-color: darkolivegreen;
     background-size: auto;
-    color:whitesmoke;
+    color:white;
     clear:both;
     text-align:center;
     padding:5px;
