--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 #header {
-    background-color: rgba(255, 0, 0, 0.50);
     background-size: 100%;
     color:white;
     opacity: 0.75;
@@ -8,12 +7,12 @@
 }
 
 #section {
-    background-color: rgba(255, 255, 255, 0.50);
+    background-color: gray;
     background-size: 100%;
     width: 40%;
     float:right;
     padding:10px;
-    color: black;
+    color: white;
     margin-bottom: 100px;
     margin-top:  100px;
 }
@@ -22,13 +21,13 @@
     background-size: 100%;
     width: 40%;
     padding: 10px;
-    color: black;
-    background-color: rgba(255, 0, 0, 0.50);
+    color: white;
+    background-color: darkred;
     margin-bottom: 100px;
     margin-top:  100px;
 }
 #footer {
-    background-color: rgba(0, 0, 0, 0.50);
+    background-color: rgb(0, 0, 0);
     background-size: auto;
     color:whitesmoke;
     clear:both;
