--- a/style.css
+++ b/style.css
@@ -28,9 +28,9 @@
     margin-top:  100px;
 }
 #footer {
-    background-color: rgb(0, 0, 0);
+    background-color:white;
     background-size: auto;
-    color:whitesmoke;
+    color:black;
     clear:both;
     text-align:center;
     padding:5px;
@@ -40,6 +40,7 @@ html {
     background-image: url(http://media.merchantcircle.com/32207117/Gym%20Pic%201_full.jpeg);
     background-size: 100%;
     background-repeat: no-repeat;
+    background-color:black;
 }
 /* Targeting both first and second level menus */
 #nav li {
