--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+#logo {
+    background-color: rgba(255,255,255,0.50);
+}
 #header {
     background-color: rgba(255, 0, 0, 0.50);
     background-size: 100%;
@@ -14,8 +17,8 @@
     float:right;
     padding:10px;
     color: white;
-    margin-bottom: 100px;
-    margin-top:  100px;
+    margin-bottom: 10px;
+    margin-top:  10px;
 }
 #section2 {
     float: left;
@@ -24,13 +27,13 @@
     padding: 10px;
     color: white;
     background-color: darkred;
-    margin-bottom: 100px;
-    margin-top:  100px;
+    margin-bottom: 10px;
+    margin-top:  10px;
 }
 #footer {
-    background-color:white;
+    background-color: rgba(255,255,255,0.50);
     background-size: auto;
-    color:black;
+    color:white;
     clear:both;
     text-align:center;
     padding:5px;
