--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@
 }
 
 #section {
-    background-color: gray;
+    border-radius: 25px;
+    background-color: darkred;
     background-size: 100%;
     width: 40%;
     float:right;
@@ -21,6 +22,7 @@
     margin-top:  10px;
 }
 #section2 {
+    border-radius: 25px;
     float: left;
     background-size: 100%;
     width: 40%;
@@ -38,6 +40,7 @@
     text-align:center;
     padding:5px;
     font-size: 10px;
+    margin-top:900px;
 }
 html {
     background-image: url(http://media.merchantcircle.com/32207117/Gym%20Pic%201_full.jpeg);
@@ -120,4 +123,16 @@ html {
 }
 #nav li:hover > ul.grandchild  {
     display: block;
+}
+#form {
+    background-color: darkred;
+    background-size: 100%;
+    width: 40%;
+    float: left;
+    padding: 10px;
+    color: white;
+    margin-bottom: 100px;
+    margin-top: 100px;
+    margin-left: 30%;
+    border-radius: 25px;
 }
